@@ -1,158 +1,357 @@
 package fu.se.cinemaxtheaterbe.features.booking.services;
 
-import fu.se.cinemaxtheaterbe.entity.User;
-import fu.se.cinemaxtheaterbe.entity.enums.BookingStatus;
 import fu.se.cinemaxtheaterbe.entity.enums.SeatType;
 import fu.se.cinemaxtheaterbe.entity.theater.Booking;
+import fu.se.cinemaxtheaterbe.entity.theater.BookingFood;
 import fu.se.cinemaxtheaterbe.entity.theater.Schedule;
 import fu.se.cinemaxtheaterbe.entity.theater.Seat;
+import fu.se.cinemaxtheaterbe.entity.theater.TheaterStock;
 import fu.se.cinemaxtheaterbe.entity.theater.Ticket;
-import fu.se.cinemaxtheaterbe.features.auth.repositories.UserRepository;
 import fu.se.cinemaxtheaterbe.features.booking.dtos.BookingRequest;
 import fu.se.cinemaxtheaterbe.features.booking.dtos.BookingResponse;
-import fu.se.cinemaxtheaterbe.features.booking.dtos.TicketResponse;
+import fu.se.cinemaxtheaterbe.features.booking.dtos.ScheduleSeatResponse;
+import fu.se.cinemaxtheaterbe.features.booking.repositories.BookingFoodRepository;
 import fu.se.cinemaxtheaterbe.features.booking.repositories.BookingRepository;
 import fu.se.cinemaxtheaterbe.features.booking.repositories.TicketRepository;
+import fu.se.cinemaxtheaterbe.features.booking.utils.VnPayUtil;
+import fu.se.cinemaxtheaterbe.features.fooddrink.repositories.TheaterStockRepository;
 import fu.se.cinemaxtheaterbe.features.movieschedule.repositories.MovieScheduleRepository;
 import fu.se.cinemaxtheaterbe.features.room.repositories.SeatRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class BookingServiceImpl implements BookingService {
 
     private final BookingRepository bookingRepository;
     private final TicketRepository ticketRepository;
-    private final UserRepository userRepository;
+    private final BookingFoodRepository bookingFoodRepository;
     private final MovieScheduleRepository scheduleRepository;
     private final SeatRepository seatRepository;
+    private final TheaterStockRepository stockRepository;
+
+    @Value("${vnpay.tmn-code}")
+    private String tmnCode;
+
+    @Value("${vnpay.hash-secret}")
+    private String hashSecret;
+
+    @Value("${vnpay.url}")
+    private String vnpayUrl;
+
+    @Value("${vnpay.return-url}")
+    private String returnUrl;
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ScheduleSeatResponse> getScheduleSeats(Long scheduleId) {
+        Schedule schedule = scheduleRepository.findById(scheduleId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Schedule not found"));
+
+        List<Seat> seats = seatRepository.findByRoomId(schedule.getRoom().getId());
+        List<Long> occupiedSeatIds = ticketRepository.findOccupiedSeatIdsByScheduleId(scheduleId);
+
+        BigDecimal basePrice = schedule.getPrice() != null ? schedule.getPrice() : new BigDecimal("90000");
+
+        return seats.stream().map(seat -> {
+            BigDecimal seatPrice = calculateSeatPrice(basePrice, seat.getSeatType());
+            boolean isOccupied = occupiedSeatIds.contains(seat.getId());
+            return ScheduleSeatResponse.builder()
+                    .seatId(seat.getId())
+                    .seatRow(seat.getSeatRow())
+                    .seatColumn(seat.getSeatColumn())
+                    .seatType(seat.getSeatType().name())
+                    .status(seat.getStatus().name())
+                    .price(seatPrice)
+                    .occupied(isOccupied)
+                    .build();
+        }).toList();
+    }
 
     @Override
     @Transactional
-    public BookingResponse createBooking(BookingRequest request, String username) {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("Authenticated user not found"));
-
+    public BookingResponse createBooking(BookingRequest request, String ipAddress) {
         Schedule schedule = scheduleRepository.findById(request.getScheduleId())
-                .orElseThrow(() -> new IllegalArgumentException("Selected movie schedule not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Schedule not found"));
 
-        // 1. Double check seat availability (Concurrency safety)
-        for (Long seatId : request.getSeatIds()) {
-            if (ticketRepository.existsByScheduleIdAndSeatId(request.getScheduleId(), seatId)) {
-                Seat seat = seatRepository.findById(seatId).orElse(null);
-                String seatLabel = seat != null ? seat.getSeatRow() + seat.getSeatColumn() : seatId.toString();
-                throw new IllegalArgumentException("Ghế " + seatLabel + " đã có người đặt trước! Vui lòng chọn ghế khác.");
-            }
-        }
+        List<Long> occupiedSeatIds = ticketRepository.findOccupiedSeatIdsByScheduleId(schedule.getId());
+        BigDecimal basePrice = schedule.getPrice() != null ? schedule.getPrice() : new BigDecimal("90000");
 
-        // 2. Initialize Booking
         Booking booking = Booking.builder()
-                .user(user)
                 .schedule(schedule)
-                .bookingTime(LocalDateTime.now())
-                .status(BookingStatus.CONFIRMED) // Directly confirmed (mock payment)
-                .paymentMethod(request.getPaymentMethod())
-                .totalAmount(BigDecimal.ZERO)
+                .fullName(request.getFullName())
+                .email(request.getEmail())
+                .phone(request.getPhone())
+                .bookingDate(LocalDateTime.now())
+                .paymentStatus("PENDING")
+                .paymentMethod("VNPAY")
+                .status("PENDING")
+                .txnRef("CINEMAX" + System.currentTimeMillis() + new Random().nextInt(1000))
                 .build();
 
         BigDecimal totalAmount = BigDecimal.ZERO;
         List<Ticket> tickets = new ArrayList<>();
 
-        // 3. Process tickets
         for (Long seatId : request.getSeatIds()) {
+            if (occupiedSeatIds.contains(seatId)) {
+                throw new ResponseStatusException(HttpStatus.CONFLICT, "Seat " + seatId + " is already booked");
+            }
             Seat seat = seatRepository.findById(seatId)
-                    .orElseThrow(() -> new IllegalArgumentException("Seat ID " + seatId + " not found"));
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Seat not found: " + seatId));
 
-            // Check if seat belongs to the room plays this schedule
             if (!seat.getRoom().getId().equals(schedule.getRoom().getId())) {
-                throw new IllegalArgumentException("Seat " + seat.getSeatRow() + seat.getSeatColumn() + " does not belong to the selected screening room");
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                        "Seat " + seatId + " does not belong to this schedule's room");
             }
 
-            // Calculate ticket price based on seat type
-            BigDecimal seatPremium = BigDecimal.ZERO;
-            if (seat.getSeatType() == SeatType.VIP) {
-                seatPremium = new BigDecimal("20000"); // Add 20k for VIP
-            } else if (seat.getSeatType() == SeatType.COUPLE) {
-                seatPremium = new BigDecimal("40000"); // Add 40k for Couple
-            }
+            BigDecimal seatPrice = calculateSeatPrice(basePrice, seat.getSeatType());
+            totalAmount = totalAmount.add(seatPrice);
 
-            BigDecimal basePrice = schedule.getPrice() != null ? schedule.getPrice() : new BigDecimal("80000");
-            BigDecimal ticketPrice = basePrice.add(seatPremium);
-            totalAmount = totalAmount.add(ticketPrice);
-
-            Ticket ticket = Ticket.builder()
+            tickets.add(Ticket.builder()
                     .booking(booking)
                     .seat(seat)
-                    .scheduleId(schedule.getId())
-                    .price(ticketPrice)
-                    .build();
+                    .price(seatPrice)
+                    .build());
+        }
 
-            tickets.add(ticket);
+        List<BookingFood> foods = new ArrayList<>();
+        if (request.getFoods() != null) {
+            for (BookingRequest.FoodItemRequest foodReq : request.getFoods()) {
+                TheaterStock foodItem = stockRepository.findByIdAndDeletedFalse(foodReq.getFoodDrinkId())
+                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                                "Snack/Drink item not found: " + foodReq.getFoodDrinkId()));
+
+                if (foodItem.getQuantityInStock() < foodReq.getQuantity()) {
+                    throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                            "Insufficient stock for " + foodItem.getItemName());
+                }
+
+                BigDecimal foodCost = foodItem.getPrice().multiply(new BigDecimal(foodReq.getQuantity()));
+                totalAmount = totalAmount.add(foodCost);
+
+                foods.add(BookingFood.builder()
+                        .booking(booking)
+                        .foodDrink(foodItem)
+                        .quantity(foodReq.getQuantity())
+                        .price(foodItem.getPrice())
+                        .build());
+            }
         }
 
         booking.setTotalAmount(totalAmount);
         booking.setTickets(tickets);
+        booking.setFoods(foods);
 
         Booking savedBooking = bookingRepository.save(booking);
-        return mapToBookingResponse(savedBooking);
+
+        String paymentUrl = buildVnPayUrl(savedBooking, ipAddress);
+
+        return mapToResponse(savedBooking, paymentUrl);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<BookingResponse> getUserBookingHistory(String username) {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+    @Transactional
+    public BookingResponse verifyPayment(Map<String, String> vnpayParams) {
+        String txnRef = vnpayParams.get("vnp_TxnRef");
+        if (txnRef == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing transaction reference");
+        }
 
-        List<Booking> bookings = bookingRepository.findByUserIdOrderByBookingTimeDesc(user.getId());
-        return bookings.stream()
-                .map(this::mapToBookingResponse)
-                .collect(Collectors.toList());
+        Booking booking = bookingRepository.findByTxnRef(txnRef)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Booking not found for reference: " + txnRef));
+
+        if (!booking.getStatus().equals("PENDING")) {
+            return mapToResponse(booking, null);
+        }
+
+        boolean isValidSignature = verifyVnPaySignature(vnpayParams);
+        if (!isValidSignature) {
+            log.error("Invalid VNPAY signature for txnRef: {}", txnRef);
+            booking.setPaymentStatus("FAILED");
+            booking.setStatus("CANCELLED");
+            bookingRepository.save(booking);
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Signature verification failed");
+        }
+
+        String responseCode = vnpayParams.get("vnp_ResponseCode");
+        String payDate = vnpayParams.get("vnp_PayDate");
+
+        if ("00".equals(responseCode)) {
+            booking.setPaymentStatus("PAID");
+            booking.setStatus("CONFIRMED");
+            booking.setPayDate(payDate);
+
+            // Deduct food stocks
+            if (booking.getFoods() != null) {
+                for (BookingFood bookingFood : booking.getFoods()) {
+                    TheaterStock foodItem = bookingFood.getFoodDrink();
+                    int newQty = foodItem.getQuantityInStock() - bookingFood.getQuantity();
+                    if (newQty < 0) {
+                        newQty = 0;
+                    }
+                    foodItem.setQuantityInStock(newQty);
+                    stockRepository.save(foodItem);
+                }
+            }
+        } else {
+            booking.setPaymentStatus("FAILED");
+            booking.setStatus("CANCELLED");
+            booking.setPayDate(payDate);
+        }
+
+        Booking updatedBooking = bookingRepository.save(booking);
+        return mapToResponse(updatedBooking, null);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<Long> getOccupiedSeatIds(Long scheduleId) {
-        List<Ticket> tickets = ticketRepository.findByScheduleId(scheduleId);
-        return tickets.stream()
-                .map(ticket -> ticket.getSeat().getId())
-                .collect(Collectors.toList());
+    private BigDecimal calculateSeatPrice(BigDecimal basePrice, SeatType seatType) {
+        if (seatType == SeatType.VIP) {
+            return basePrice.add(new BigDecimal("20000"));
+        } else if (seatType == SeatType.COUPLE) {
+            return basePrice.multiply(new BigDecimal("2"));
+        }
+        return basePrice;
     }
 
-    private BookingResponse mapToBookingResponse(Booking booking) {
-        Schedule schedule = booking.getSchedule();
-        
-        List<TicketResponse> ticketResponses = booking.getTickets().stream()
-                .map(ticket -> TicketResponse.builder()
-                        .ticketId(ticket.getId())
-                        .seatId(ticket.getSeat().getId())
-                        .seatRow(ticket.getSeat().getSeatRow())
-                        .seatColumn(ticket.getSeat().getSeatColumn())
-                        .seatType(ticket.getSeat().getSeatType())
-                        .price(ticket.getPrice())
+    private String buildVnPayUrl(Booking booking, String ipAddress) {
+        String vnp_Version = "2.1.0";
+        String vnp_Command = "pay";
+        String vnp_TxnRef = booking.getTxnRef();
+        String vnp_OrderInfo = "Thanh toan ve xem phim Cinemax. Ma dat ve: " + booking.getTxnRef();
+        String vnp_OrderType = "other";
+        String vnp_Locale = "vn";
+
+        long amountInCents = booking.getTotalAmount().multiply(new BigDecimal("100")).longValue();
+
+        Map<String, String> vnp_Params = new HashMap<>();
+        vnp_Params.put("vnp_Version", vnp_Version);
+        vnp_Params.put("vnp_Command", vnp_Command);
+        vnp_Params.put("vnp_TmnCode", tmnCode);
+        vnp_Params.put("vnp_Amount", String.valueOf(amountInCents));
+        vnp_Params.put("vnp_CurrCode", "VND");
+        vnp_Params.put("vnp_TxnRef", vnp_TxnRef);
+        vnp_Params.put("vnp_OrderInfo", vnp_OrderInfo);
+        vnp_Params.put("vnp_OrderType", vnp_OrderType);
+        vnp_Params.put("vnp_Locale", vnp_Locale);
+        vnp_Params.put("vnp_ReturnUrl", returnUrl);
+        vnp_Params.put("vnp_IpAddr", ipAddress);
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+        vnp_Params.put("vnp_CreateDate", LocalDateTime.now().format(formatter));
+
+        List<String> fieldNames = new ArrayList<>(vnp_Params.keySet());
+        Collections.sort(fieldNames);
+
+        StringBuilder hashData = new StringBuilder();
+        StringBuilder query = new StringBuilder();
+        Iterator<String> itr = fieldNames.iterator();
+        while (itr.hasNext()) {
+            String fieldName = itr.next();
+            String fieldValue = vnp_Params.get(fieldName);
+            if (fieldValue != null && !fieldValue.isEmpty()) {
+                hashData.append(fieldName);
+                hashData.append('=');
+                hashData.append(URLEncoder.encode(fieldValue, StandardCharsets.US_ASCII));
+
+                query.append(URLEncoder.encode(fieldName, StandardCharsets.US_ASCII));
+                query.append('=');
+                query.append(URLEncoder.encode(fieldValue, StandardCharsets.US_ASCII));
+
+                if (itr.hasNext()) {
+                    query.append('&');
+                    hashData.append('&');
+                }
+            }
+        }
+
+        String queryUrl = query.toString();
+        String secureHash = VnPayUtil.hmacSHA512(hashSecret, hashData.toString());
+        queryUrl += "&vnp_SecureHash=" + secureHash;
+
+        return vnpayUrl + "?" + queryUrl;
+    }
+
+    private boolean verifyVnPaySignature(Map<String, String> params) {
+        String secureHash = params.get("vnp_SecureHash");
+        if (secureHash == null) {
+            return false;
+        }
+
+        Map<String, String> filterParams = new HashMap<>();
+        for (Map.Entry<String, String> entry : params.entrySet()) {
+            String key = entry.getKey();
+            String val = entry.getValue();
+            if (key != null && !key.equals("vnp_SecureHash") && !key.equals("vnp_SecureHashType") && val != null
+                    && !val.isEmpty()) {
+                filterParams.put(key, val);
+            }
+        }
+
+        List<String> fieldNames = new ArrayList<>(filterParams.keySet());
+        Collections.sort(fieldNames);
+
+        StringBuilder sb = new StringBuilder();
+        Iterator<String> itr = fieldNames.iterator();
+        while (itr.hasNext()) {
+            String fieldName = itr.next();
+            String fieldValue = filterParams.get(fieldName);
+            sb.append(fieldName);
+            sb.append('=');
+            sb.append(URLEncoder.encode(fieldValue, StandardCharsets.US_ASCII));
+            if (itr.hasNext()) {
+                sb.append('&');
+            }
+        }
+
+        String computedHash = VnPayUtil.hmacSHA512(hashSecret, sb.toString());
+        return computedHash.equalsIgnoreCase(secureHash);
+    }
+
+    private BookingResponse mapToResponse(Booking booking, String paymentUrl) {
+        List<String> seatCodes = booking.getTickets().stream()
+                .map(t -> t.getSeat().getSeatRow() + t.getSeat().getSeatColumn())
+                .toList();
+
+        List<BookingResponse.FoodItemResponse> foodResponses = booking.getFoods().stream()
+                .map(f -> BookingResponse.FoodItemResponse.builder()
+                        .itemName(f.getFoodDrink().getItemName())
+                        .quantity(f.getQuantity())
+                        .price(f.getPrice())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+
+        Schedule schedule = booking.getSchedule();
+        String showtime = schedule.getStartTime().format(DateTimeFormatter.ofPattern("HH:mm dd/MM/yyyy"));
 
         return BookingResponse.builder()
                 .bookingId(booking.getId())
-                .username(booking.getUser().getUsername())
-                .movieId(schedule.getMovie().getId())
+                .txnRef(booking.getTxnRef())
                 .movieTitle(schedule.getMovie().getTitle())
-                .roomId(schedule.getRoom().getId())
                 .roomName(schedule.getRoom().getName())
-                .startTime(schedule.getStartTime())
-                .bookingTime(booking.getBookingTime())
+                .showtime(showtime)
+                .fullName(booking.getFullName())
+                .email(booking.getEmail())
+                .phone(booking.getPhone())
+                .seatCodes(seatCodes)
+                .foods(foodResponses)
                 .totalAmount(booking.getTotalAmount())
                 .status(booking.getStatus())
-                .paymentMethod(booking.getPaymentMethod())
-                .tickets(ticketResponses)
+                .paymentStatus(booking.getPaymentStatus())
+                .paymentUrl(paymentUrl)
                 .build();
     }
 }
